--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Fixter</p>
+                <p class="event listening">Connecting to Fixter...</p>
                 <p class="event received">Fixter is Ready</p>
             </div>
         </div>
