--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -33,8 +33,8 @@
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Amit...</p>
-                <p class="event received">Amit is Ready</p>
+                <p class="event listening">Connecting to Fixter...</p>
+                <p class="event received">Fixter is Ready</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
